test/tests/errors/error-class-proc-out-of-scope.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public proc x() {}
    }

    x();
}